k8s/vampi-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vampi-app
  labels:
    app: vampi
