k8s/vampi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vampi-service
  namespace: vampi-app
  labels:
    app: vampi
spec:
  type: ClusterIP
  selector:
    app: vampi
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
